# libFCD

./: .gitignore  CMakeLists.txt  README  TODO
FCDControl/: CMakeLists.txt  main.c
FCDlib/: CMakeLists.txt  FCD.h  FCDlib.c  FCDlib.cpp  FCDlib.def  FCDlib.h  FCDlib.vcxproj  FCDlib.vcxproj.filters  HID.c  HID.h
hidapi-0.7.0/: CMakeLists.txt
hidapi-0.7.0/windows/: UpgradeLog.XML  hidapi.vcxproj  hidapi.vcxproj.filters  hidtest.vcxproj
testFCD/: stdafx.cpp  testFCD.cpp  testFCD.vcxproj  testFCD.vcxproj.filters
